# rust_backend_server

./: .gitignore  Cargo.toml  README.md
src/: database.rs  main.rs  schema.rs
src/database/: requests.rs  responses.rs
